13.dec (ws)
      - fix #8194 Edit instruments
8.dec (la)
      - fix #8184: Creating parts with cross staff barlines crash
4.dec (la)
      - fix #8161: Missing lyrics in MIDI import
24.nov (la)
      - fix #8018: Lilypond: Quote marks in lyrics need to be escaped
      - fix #7892: Exchange voices adds extra rests
      - fix #7944: Instrument limit
19.nov (la)
      - fix #7017: Chord names does not support "H" name as chord
14.nov (la)
      - fix #7249: Notehead should be on top of the staff lines
13.nov (la)
      - fix #7311: Dragging tied notes and removing tie gives weird result
11.nov (la)
      - fix #7882: Transposing a score shouldn't transpose a drum staff (from trunk)
      - fix #6320: Add œ in F2 text palette
9.nov  (la)
      - fix #7881: Exchange voices does not work on last measure
7.nov  (la)
      - fix #7832: Extra spaces cause lyric pasting to repeat words
      - fix #7734: Pasting lyrics with spaces is not working (regression)
5.nov  (la)
      - fix #6345: First time users confuse demo score for demo software
2.nov  (la)
      - fix #6451: score jump to current position when record MIDI in Note Input Mode
1.nov  (la)
      - fix #7614: menu item crash when continuing session with no scores
      - fix #7740: drag and delete + undo causes crash
      - Better voltas + multimeasure rest layout
25.oct (la)
      - fix #7665: Change instrument, undo does not undo sound
23.oct (la)
      - fix default fingering font
22.oct (la)
      - fix #7624: pressing space bar when slur is selected crashes program
      - fix #7562: Cursor in text remains in print or PDF
17.oct (la)
      - fix #7530: Hairpin starting on the first note is lost on reload
14.oct (la)
      - fix #7514: Moving instrument deletes tuplets
      - fix #7520: Undo reorder instruments does not work as expected
      - fix #7519: Moving instrument causes crash
10.oct (db)
      - fix: Local Handbook disabled when no file is open
28.sep (ws)